--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
     "react-dom": "^18",
     "react-icons": "^4.12.0",
     "react-scroll": "^1.9.0",
-    "swiper": "^11.0.5"
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-scroll": "^1.8.9",
+    "@types/react-slick": "^0.23.12",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
