--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "next": "14.0.3",
     "react": "^18",
+    "react-animate-height": "^3.2.3",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
     "react-scroll": "^1.9.0",
