--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
 	"dependencies": {
 		"@emailjs/browser": "^3.12.1",
 		"@headlessui/react": "^1.7.17",
+		"clsx": "^2.1.0",
 		"next": "^14.1.0",
 		"react": "^18",
 		"react-dom": "^18",
 		"react-icons": "^4.12.0",
 		"react-slick": "^0.29.0",
-		"slick-carousel": "^1.8.1"
+		"slick-carousel": "^1.8.1",
+		"tailwind-merge": "^2.2.1"
 	},
 	"devDependencies": {
 		"@types/node": "^20",
