--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@ducanh2912/next-pwa": "^10.2.6",
 		"@emailjs/browser": "^3.12.1",
 		"@headlessui/react": "^1.7.17",
 		"clsx": "^2.1.0",
