--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,18 +4,18 @@
 	"short_name": "OWz",
 	"icons": [
 		{
-			"src": "/icons/android-chrome-192x192.png",
+			"src": "/public/assets/honda.png",
 			"sizes": "192x192",
 			"type": "image/png",
 			"purpose": "any maskable"
 		},
 		{
-			"src": "/icons/android-chrome-384x384.png",
+			"src": "/public/assets/honda.png",
 			"sizes": "384x384",
 			"type": "image/png"
 		},
 		{
-			"src": "/icons/icon-512x512.png",
+			"src": "/public/assets/honda.png",
 			"sizes": "512x512",
 			"type": "image/png"
 		}
